--- a/_feed/tweets.xml.njk
+++ b/_feed/tweets.xml.njk
@@ -1,12 +1,12 @@
 ---json
 {
-  "permalink": "feed.xml",
+  "permalink": "tweets.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Steven Hicks",
+    "title": "Steven Hicks tweetable posts",
     "subtitle": "Ramblings on development, life, and the development life.",
-    "url": "https://stevenhicks.me",
-    "feedUrl": "https://stevenhicks.me/feed.xml",
+    "url": "https://stevenhicks.me/tweet/",
+    "feedUrl": "https://stevenhicks.me/tweets.xml",
     "author": {
       "name": "Steven Hicks",
       "email": "steven.j.hicks@gmail.com"
@@ -20,20 +20,20 @@
 	<subtitle>{{ metadata.subtitle }}</subtitle>
 	<link href="{{ metadata.feedUrl }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.post | lastUpdatedDate }}</updated>
+	<updated>{{ collections.tweetablePostsReversed | lastUpdatedDate }}</updated>
 	<id>{{ metadata.feedUrl }}</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
 	</author>
-	{%- for post in collections.postsReversed %}
+	{%- for post in collections.tweetablePostsReversed %}
 		{% set absolutePostUrl %}{{ metadata.url }}{{ post.url}}{% endset %}
 		<entry>
 			<title>{{ post.data.title }}</title>
 			<link href="{{ absolutePostUrl }}"/>
 			<updated>{{ post.date | rssDate }}</updated>
 			<id>{{ absolutePostUrl }}</id>
-			<content type="html">{{ post.templateContent }}</content>
+			<content type="text">{{ post.data.tweet }}</content>
 		</entry>
 	{%- endfor %}
 </feed>
