--- a/_feed/tweets.xml.njk
+++ b/_feed/tweets.xml.njk
@@ -33,9 +33,7 @@
 			<link href="{{ absolutePostUrl }}"/>
 			<updated>{{ post.date | rssDate }}</updated>
 			<id>{{ absolutePostUrl }}</id>
-			<content type="text">{{ post.data.tweet }}
-
-				{{ absolutePostUrl }}</content>
+			<content type="text">{{ post.data.tweet }}</content>
 		</entry>
 	{%- endfor %}
 </feed>
