--- a/css/site.css
+++ b/css/site.css
@@ -182,7 +182,8 @@ p code {
   background-color: white; }
 
 p strong {
-  font-weight: bold; }
+  font-weight: bold;
+  color: #470900; }
 
 .first {
   margin-top: 0; }
