--- a/css/site.css
+++ b/css/site.css
@@ -276,9 +276,10 @@ article {
 .main-copy {
   margin-top: 3rem; }
 
-.twitter-tweet {
-  margin-left: auto;
-  margin-right: auto; }
+.twitter-tweet, .mastodon-embed, .instagram-media {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: flex !important; }
 
 h3 + .content-article {
   margin-top: 2rem; }
