--- a/scss/site.scss
+++ b/scss/site.scss
@@ -29,7 +29,7 @@ $width-max-mobile: 670px;
 $width-min-desktop: 671px;
 
 @mixin boxShadowed($color) {
-  -webkit-box-shadow: 0px 1px 5px$color;
+  -webkit-box-shadow: 0px 1px 5px $color;
   -moz-box-shadow: 0px 1px 5px $color;
   box-shadow: 0px 1px 5px $color;
 }
@@ -478,4 +478,248 @@ div.about {
     }
     text-align: center;
   }
+}
+
+/* Tweetback embed styles */
+
+/* style it like an embed */
+.tweet {
+  @include boxShadowed(#1c7386);
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  padding: 20px;
+  font-family: $sans-serif, Arial, Helvetica, sans-serif;
+  font-size: 1.1em;
+  border-radius: 4px;
+}
+
+/* some overrides */
+.tweet-avatar {
+  box-shadow: none;
+}
+
+/* and the rest of these are pulled directly from tweetback.
+
+/* Individual tweet */
+.is_retweet .tweet-text {
+	opacity: .6;
+	font-style: italic;
+}
+.tweet-text {
+	white-space: pre-wrap;
+	line-height: 1.4;
+	word-break: break-word;
+}
+.tweet-url {
+	word-break: break-word;
+	hyphens: none;
+}
+.tweet-username {
+	font-weight: 500;
+}
+.tweet-username,
+.tweet-username:visited {
+	color: inherit;
+	font-size: 0.9545454545455em; /* 21px /22 */
+}
+.tweet-pretext {
+	display: block;
+	font-style: italic;
+	font-size: 1rem; /* 16px /16 */
+	padding: 0 0 .4em;
+}
+.tweet-pretext,
+.tweet-pretext:visited {
+	color: #555;
+}
+.tweet-metadata {
+	display: block;
+	margin-top: .5em;
+}
+.tweet-metadata,
+.tweet-metadata :link,
+.tweet-metadata :visited {
+	color: #757575;
+}
+
+/* Individual tweet */
+.tweet {
+	// font-size: 1.625em; /* 26px /16 */
+	// margin: 0 0 3.5rem; sjh
+	margin-bottom: 3rem;
+	margin-top: 3rem;
+	// padding: 0; sjh
+	list-style: none;
+}
+.tweet.is_reply,
+.tweet.is_retweet {
+	font-size: 1.375em; /* 22px /16 */
+}
+.tweet-next .tweet-text,
+.tweet-previous .tweet-text {
+	color: #777;
+}
+.tweet-next .tag-favorite,
+.tweet-next .tag-retweet,
+.tweet-previous .tag-favorite,
+.tweet-previous .tag-retweet {
+	opacity: .5;
+}
+
+/* Avatar */
+.tweet-avatar {
+	width: 27px;
+	height: 27px;
+	margin-bottom: -3px;
+	border-radius: 50%;
+}
+h1 .tweet-avatar {
+	vertical-align: text-bottom;
+	margin-right: 5px;
+}
+
+/* Tweet Media */
+.tweet-medias {
+	display: flex;
+	// margin: 1em 0 0; sjh
+	margin: 1em 0 1em;
+	max-height: 10em;
+	gap: .5em;
+}
+.tweet-medias > a {
+	display: block;
+	flex-basis: 12em;
+	flex-grow: 0.5;
+}
+.tweet-media {
+	border-radius: .25em;
+	box-shadow: 0 0px 18px 3px RGB(0 0 0 / 40%);
+}
+img.tweet-media {
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: 1px solid #ccc;
+}
+video.tweet-media {
+	max-width: 100%;
+	width: auto;
+	max-height: 10em;
+}
+.tweet-media-load-error {
+	display: block;
+	border-top: 1px dashed;
+	margin: .5em 0;
+	padding-top: .5em;
+	color: #777;
+}
+a[href]:focus .tweet-media-load-error,
+a[href]:hover .tweet-media-load-error {
+	color: #333;
+}
+@supports (object-fit: cover) {
+	.tweet-media {
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+}
+@supports (object-fit: contain) {
+	video.tweet-media {
+		object-fit: contain;
+	}
+}
+.tweet-previous .tweet-medias,
+.tweet-next .tweet-medias {
+	max-height: 6em;
+}
+.tweet-previous .tweet-media,
+.tweet-next .tweet-media {
+	opacity: .7;
+	max-height: 6em;
+	max-width: 12em;
+}
+.tweet-media:hover {
+	border-color: #999;
+}
+.tweet-previous .tweet-media:hover,
+.tweet-next .tweet-media:hover {
+	opacity: 1;
+}
+/* OpenGraph images */
+img.tweet-media-og {
+	object-position: center;
+}
+
+/* Tags */
+.tag {
+	display: inline-block;
+	font-size: 0.8125rem; /* 13px /16 */
+	// margin: 0 0 0 4px; sjh
+	margin: 0 4px;
+	padding: 6px;
+	white-space: nowrap;
+	text-decoration: none;
+	background-color: #999;
+	color: #fff;
+	border: 1px solid #999;
+	border-radius: 0.4em;
+	font-weight: 600;
+	vertical-align: text-bottom;
+	line-height: 1;
+}
+.tweet-metadata .tag:link,
+.tweet-metadata .tag:visited {
+	color: #fff;
+}
+.tag-lite {
+	border-color: transparent;
+	padding-left: 2px;
+	padding-right: 2px;
+	font-weight: 400;
+}
+.tag-icon {
+	display: inline-flex;
+	border: none;
+	padding: 0;
+	margin-bottom: 0;
+	border-radius: .6em;
+	overflow: hidden;
+}
+.tag-naked {
+	background-color: #fff;
+	color: #757575;
+}
+.tweet-metadata .tag-naked:link,
+.tweet-metadata .tag-naked:visited {
+	color: #757575;
+}
+.tag:first-child,
+.tag + .tag {
+	margin-left: 0;
+}
+.tag-favorite {
+	background-color: #e0245e;
+	border-color: #e0245e;
+}
+.tag-retweet {
+	background-color: #397d58;
+	border-color: #397d58;
+}
+.tag-lite.tag-favorite,
+.tag-lite.tag-retweet {
+	background-color: #fff;
+	border-color: transparent;
+	font-weight: inherit;
+}
+.tag-lite.tag-favorite {
+	color: #e0245e;
+}
+.tag-lite.tag-retweet {
+	color: #096f37;
+}
+.tag-avatar {
+	padding: 0;
 }
