--- a/_includes/layout.pug
+++ b/_includes/layout.pug
@@ -63,7 +63,7 @@ html(lang="en")
                         i.fa.fa-envelope-square(aria-hidden='true')
                         span.sr-only
                             | Steven Hicks's email
-                    h6 &copy; Steven Hicks 2022
+                    h6 &copy; Steven Hicks #{metadata.year}
         script(src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js')
         script.
             hljs.initHighlightingOnLoad();
